-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Query Integration
-
Fully Compatible
-
ALL
-
QI 2024-03-18
-
None
-
None
-
None
-
None
-
None
-
None
-
None
As part of work forĀ SERVER-87165, I turned on block-based testing for unit tests in BSONColumnTest that use interleaved mode.
The following tests fail with a testing assertion binaryEqualValues
NonZeroRLEInFirstBlockAfterSimple8bBlockRLEFirstInControlAfterMixedValueBlock128- InterleavedDoubleIncreaseScaleFromDeltaNoRescale
- InterleavedDoubleIncreaseScaleFromDeltaNoRescaleLegacyDecompress
- is depended on by
-
SERVER-85178 Integrate block-based decompressor for scalars within objects into SBE ts_block.cpp
-
- Closed
-
-
SERVER-87861 Remove flag for enabling/disabling block-based testing in BSONColumnTest
-
- Closed
-
- related to
-
SERVER-88095 Complete TODO listed in SERVER-87305
-
- Closed
-
-
SERVER-88232 Complete TODO listed in SERVER-87305
-
- Closed
-