SERVER-87305 Block-based testing fails with unequal values (#19982)

GitOrigin-RevId: ce36b57f147bada00d03eea89c3149994a637a94